--- a/smart-contract/.env
+++ b/smart-contract/.env
@@ -1,2 +1,2 @@
-mnemonic = 'YZwHGZaTHI3AsoliDMVkPWp42L4D0LET4NtfPAG5aCRvEBKXvFy4Ig'
+mnemonic = 'MNEMONIC="jar super loan fossil remember symptom cotton bless portion verb icon raccoon"'
 link = 'https://holesky.infura.io/v3/9f41d3b4c9ae415b8901636c54bdeb5d'
