--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "compile": "node compile.js",
     "deploy": "node deploy.js",
     "dev": "next dev",
     "build": "next build",
